--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <section class="banner d-flex align-items-end">
             <div class="banner_img">
                 <figure class="mb-0 ratio">
-                    <img src="/images/bannerimg.webp" alt="img">
+                    <img src="./images/bannerimg.webp" alt="img">
                 </figure>
             </div>
             <div class="banner_social_icons">
@@ -658,7 +658,7 @@
                                 <div class="news-card">
                                     <div class="news-card_img">
                                         <figure class="ratio">
-                                            <img src="/images/card-1.png" alt="img">
+                                            <img src="./images/card-1.png" alt="img">
                                         </figure>
                                     </div>
                                     <div class="news-card_data">
@@ -680,7 +680,7 @@
                                 <div class="news-card">
                                     <div class="news-card_img">
                                         <figure class="ratio">
-                                            <img src="/images/card-1.png" alt="img">
+                                            <img src="./images/card-1.png" alt="img">
                                         </figure>
                                     </div>
                                     <div class="news-card_data">
@@ -702,7 +702,7 @@
                                 <div class="news-card">
                                     <div class="news-card_img">
                                         <figure class="ratio">
-                                            <img src="/images/card-1.png" alt="img">
+                                            <img src="./images/card-1.png" alt="img">
                                         </figure>
                                     </div>
                                     <div class="news-card_data mb-2">
@@ -724,7 +724,7 @@
                                 <div class="news-card">
                                     <div class="news-card_img">
                                         <figure class="ratio">
-                                            <img src="/images/card-1.png" alt="img">
+                                            <img src="./images/card-1.png" alt="img">
                                         </figure>
                                     </div>
                                     <div class="news-card_data">
@@ -1386,7 +1386,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 
