--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
                         <li class="breadcrumb-item fs-18">/ MEDIA</li>
                     </ol>
                 </nav>
-                <div class="d-flex align-items-center justify-content-between">
+                <div class="d-flex align-items-center justify-content-between mb-4">
                     <h4 class="h2 stroke-text mb-0 "> IMAGES <span> VIDEOS</span></h4>
                     <a href="#" class="viewall" id="viewall">View all</a>
                 </div>
