--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
             </div>
         </section>
         <!-- Football in Qatar -->
-        <section class="football-qatar">
+        <section class="football-qatar mt-4">
             <div class="container">
                 <div class="row align-items-center wrap_qatar">
                     <div class="col-md-6">
