--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                                         </div>
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
-                                        <div class="btn_wrap d-flex">
+                                        <div class="btn_wrap d-flex flex-wrap  mb-2 mb-md-0">
                                             <a href="">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
@@ -689,7 +689,7 @@
                                         </div>
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
-                                        <div class="btn_wrap d-flex">
+                                        <div class="btn_wrap d-flex flex-wrap  mb-2 mb-md-0">
                                             <a href="">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
@@ -711,7 +711,7 @@
                                         </div>
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
-                                        <div class="btn_wrap d-flex">
+                                        <div class="btn_wrap d-flex flex-wrap  mb-2 mb-md-0">
                                             <a href="">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
@@ -733,7 +733,7 @@
                                         </div>
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
-                                        <div class="btn_wrap d-flex">
+                                        <div class="btn_wrap d-flex flex-wrap mb-2 mb-md-0">
                                             <a href="">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
