--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@
                                         </div>
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
-                                        <div class="btn_wrap d-flex flex-wrap  mb-2 mb-md-0">
-                                            <a href="">REFEREES</a>
+                                        <div class="btn_wrap d-flex flex-wrap  ">
+                                            <a href="" class="mb-3 mb-md-0">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
                                     </div>
@@ -690,7 +690,7 @@
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
                                         <div class="btn_wrap d-flex flex-wrap  mb-2 mb-md-0">
-                                            <a href="">REFEREES</a>
+                                            <a href="" class="mb-3 mb-md-0">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
                                     </div>
@@ -712,7 +712,7 @@
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
                                         <div class="btn_wrap d-flex flex-wrap  mb-2 mb-md-0">
-                                            <a href="">REFEREES</a>
+                                            <a href="" class="mb-3 mb-md-0">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
                                     </div>
@@ -734,7 +734,7 @@
                                         <h4 class="news-card_ttl fs-32">Japan Books Ticket to AFC U17 Asian Cup™ 2025
                                             Finals, Seals Group F Top Spot </h4>
                                         <div class="btn_wrap d-flex flex-wrap mb-2 mb-md-0">
-                                            <a href="">REFEREES</a>
+                                            <a href="" class="mb-3 mb-md-0">REFEREES</a>
                                             <a href="">Football Development</a>
                                         </div>
                                     </div>
